@@ -4,6 +4,7 @@ import hr.tvz.java.freelance.freelancemanagementtool.exception.DatabaseReadExcep
 import hr.tvz.java.freelance.freelancemanagementtool.model.Client;
 import hr.tvz.java.freelance.freelancemanagementtool.repository.ClientDatabaseRepository;
 import hr.tvz.java.freelance.freelancemanagementtool.session.SessionManager;
+import hr.tvz.java.freelance.freelancemanagementtool.util.DialogHelper;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
@@ -13,7 +14,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controller for the Client Search screen. Handles displaying, filtering,
@@ -28,14 +28,17 @@ public class ClientSearchController {
     @FXML private TableColumn<Client, String> nameColumn;
     @FXML private TableColumn<Client, String> emailColumn;
     @FXML private TableColumn<Client, String> contactPersonColumn;
-    @FXML private Button addButton, editButton, deleteButton;
+    @FXML private Button addButton;
+    @FXML private Button editButton;
+    @FXML private Button deleteButton;
 
     private final ClientDatabaseRepository clientRepository = new ClientDatabaseRepository();
     private List<Client> allClients = new ArrayList<>();
 
     /**
-     * Initializes the controller. Sets up table columns, loads initial data,
-     * and configures UI based on user role.
+     * Initializes the controller when the FXML is loaded.
+     * Sets up table columns, configures UI based on user role,
+     * and performs the initial load of client data.
      */
     @FXML
     public void initialize() {
@@ -45,7 +48,7 @@ public class ClientSearchController {
     }
 
     /**
-     * Configures cell value factories for the TableView columns.
+     * Configures the cell value factories for the TableView columns.
      */
     private void setupTableColumns() {
         nameColumn.setCellValueFactory(cellData -> new SimpleStringProperty(cellData.getValue().getName()));
@@ -54,17 +57,21 @@ public class ClientSearchController {
     }
 
     /**
-     * Hides modification buttons if the logged-in user is not an Admin.
+     * Hides or shows modification buttons based on the logged-in user's role.
+     * Only Admins can add, edit, or delete clients.
      */
     private void configureRoleBasedAccess() {
         boolean isNotAdmin = !SessionManager.isAdmin();
+        addButton.setManaged(!isNotAdmin);
         addButton.setVisible(!isNotAdmin);
+        editButton.setManaged(!isNotAdmin);
         editButton.setVisible(!isNotAdmin);
+        deleteButton.setManaged(!isNotAdmin);
         deleteButton.setVisible(!isNotAdmin);
     }
 
     /**
-     * Loads all clients from the database and populates the table.
+     * Loads all clients from the repository and populates the table.
      */
     private void loadClients() {
         try {
@@ -72,13 +79,12 @@ public class ClientSearchController {
             clientsTableView.setItems(FXCollections.observableArrayList(allClients));
             logger.info("Successfully loaded {} clients into the table.", allClients.size());
         } catch (DatabaseReadException e) {
-            logger.error("Failed to load clients from the database.", e);
-            new Alert(Alert.AlertType.ERROR, "Error loading client data. Please check logs.").showAndWait();
+            showStyledAlert(Alert.AlertType.ERROR, "Database Error", "Failed to Load Clients", "Could not retrieve client data from the database. Please check the logs.");
         }
     }
 
     /**
-     * Handles the filter button action.
+     * Handles the filter button action. Filters the client list based on name.
      */
     @FXML
     private void handleFilter() {
@@ -87,27 +93,97 @@ public class ClientSearchController {
             clientsTableView.setItems(FXCollections.observableArrayList(allClients));
             return;
         }
-
         List<Client> filteredList = allClients.stream()
                 .filter(c -> c.getName().toLowerCase().contains(nameFilter.toLowerCase()))
-                .collect(Collectors.toList());
-
+                .toList();
         clientsTableView.setItems(FXCollections.observableArrayList(filteredList));
-        logger.info("Applied client filter. Displaying {} clients.", filteredList.size());
     }
 
     /**
-     * Clears the filter and shows all clients.
+     * Clears the name filter and restores the full list of clients.
      */
     @FXML
     private void clearFilters() {
         nameFilterField.clear();
         clientsTableView.setItems(FXCollections.observableArrayList(allClients));
-        logger.info("Client filters cleared.");
     }
 
-    // Placeholder methods for Add, Edit, Delete functionality
-    @FXML private void handleAddNewClient() { logger.info("Add New Client button clicked."); }
-    @FXML private void handleEditClient() { logger.info("Edit Client button clicked."); }
-    @FXML private void handleDeleteClient() { logger.info("Delete Client button clicked."); }
+    /**
+     * Opens the client edit dialog in "Add New" mode using the generic DialogHelper.
+     */
+    @FXML
+    private void handleAddNewClient() {
+        boolean saveClicked = DialogHelper.showEditDialog("client-edit-view.fxml", "Add New Client", null);
+        if (saveClicked) {
+            loadClients();
+        }
+    }
+
+    /**
+     * Opens the client edit dialog in "Edit" mode for the selected client.
+     */
+    @FXML
+    private void handleEditClient() {
+        Client selectedClient = clientsTableView.getSelectionModel().getSelectedItem();
+        if (selectedClient != null) {
+            boolean saveClicked = DialogHelper.showEditDialog("client-edit-view.fxml", "Edit Client", selectedClient);
+            if (saveClicked) {
+                loadClients();
+            }
+        } else {
+            showStyledAlert(Alert.AlertType.WARNING, "Selection Missing", "No Client Selected", "Please select a client from the table to edit.");
+        }
+    }
+
+    /**
+     * Deletes the selected client after user confirmation.
+     */
+    @FXML
+    private void handleDeleteClient() {
+        Client selectedClient = clientsTableView.getSelectionModel().getSelectedItem();
+        if (selectedClient == null) {
+            showStyledAlert(Alert.AlertType.WARNING, "Selection Missing", "No Client Selected", "Please select a client from the table to delete.");
+            return;
+        }
+
+        Alert confirmation = new Alert(Alert.AlertType.CONFIRMATION);
+        confirmation.setTitle("Confirm Deletion");
+        confirmation.setHeaderText("Are you sure you want to delete this client?");
+        confirmation.setContentText("Client: " + selectedClient.getName() + "\nThis action cannot be undone.");
+        styleAlert(confirmation);
+
+        if (confirmation.showAndWait().orElse(ButtonType.CANCEL) == ButtonType.OK) {
+            clientRepository.deleteById(selectedClient.getId());
+            logger.info("User confirmed deletion of client ID: {}", selectedClient.getId());
+            loadClients();
+        }
+    }
+
+    /**
+     * Creates, styles, and shows an Alert dialog.
+     *
+     * @param type The type of alert (e.g., WARNING, ERROR).
+     * @param title The text for the window title bar.
+     * @param header The main header text inside the dialog.
+     * @param content The detailed content message.
+     */
+    private void showStyledAlert(Alert.AlertType type, String title, String header, String content) {
+        Alert alert = new Alert(type);
+        alert.setTitle(title);
+        alert.setHeaderText(header);
+        alert.setContentText(content);
+        styleAlert(alert);
+        alert.showAndWait();
+    }
+
+    /**
+     * Applies the custom dark theme stylesheet to any given Alert.
+     *
+     * @param alert The Alert dialog to be styled.
+     */
+    private void styleAlert(Alert alert) {
+        DialogPane dialogPane = alert.getDialogPane();
+        dialogPane.getStylesheets().add(getClass().getResource("/hr/tvz/java/freelance/freelancemanagementtool/css/styles.css").toExternalForm());
+        dialogPane.getStyleClass().add("dialog-pane");
+    }
 }
