@@ -1,35 +1,29 @@
 package hr.tvz.java.freelance.freelancemanagementtool.controller;
 
-import hr.tvz.java.freelance.freelancemanagementtool.FreelanceManagementApplication;
 import hr.tvz.java.freelance.freelancemanagementtool.enums.ProjectStatus;
 import hr.tvz.java.freelance.freelancemanagementtool.exception.DatabaseReadException;
 import hr.tvz.java.freelance.freelancemanagementtool.model.Client;
 import hr.tvz.java.freelance.freelancemanagementtool.model.Project;
 import hr.tvz.java.freelance.freelancemanagementtool.repository.ClientDatabaseRepository;
 import hr.tvz.java.freelance.freelancemanagementtool.repository.ProjectDatabaseRepository;
+import hr.tvz.java.freelance.freelancemanagementtool.util.DialogHelper;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.Scene;
 import javafx.scene.control.*;
-import javafx.stage.Modality;
-import javafx.stage.Stage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
  * Controller for the Project Search screen. Handles displaying, filtering,
- * and managing project data.
+ * and managing project data by interacting with repositories and dialogs.
  */
 public class ProjectSearchController {
 
@@ -50,18 +44,21 @@ public class ProjectSearchController {
     private Map<Long, Client> clientMap;
 
     /**
-     * Initializes the controller. Sets up table columns and loads initial data.
+     * Initializes the controller when the FXML is loaded.
+     * Sets up table columns, loads clients into a map for efficiency,
+     * and performs the initial load of project data.
      */
     @FXML
     public void initialize() {
-        loadClientsIntoMap(); // Load clients first
+        loadClientsIntoMap();
         setupTableColumns();
         statusFilterComboBox.setItems(FXCollections.observableArrayList(ProjectStatus.values()));
         loadProjects();
     }
 
     /**
-     * Loads all clients into a Map for efficient lookup. Guideline #4 (Maps).
+     * Loads all clients from the database into a Map for efficient lookup
+     * when displaying project data. This avoids repeated database queries.
      */
     private void loadClientsIntoMap() {
         try {
@@ -69,20 +66,20 @@ public class ProjectSearchController {
                     .collect(Collectors.toMap(Client::getId, Function.identity()));
         } catch (DatabaseReadException e) {
             logger.error("CRITICAL: Failed to load clients for project view.", e);
-            clientMap = Map.of(); // Use an empty map to prevent NullPointerExceptions
+            showStyledAlert(Alert.AlertType.ERROR, "Database Error", "Failed to Load Client Data", "Could not establish a connection or read client data. The application may not function correctly.");
+            clientMap = Map.of();
         }
     }
 
     /**
-     * Configures the cell value factories for the TableView columns.
+     * Configures the cell value factories for the TableView columns,
+     * binding them to the properties of the Project model.
      */
     private void setupTableColumns() {
         nameColumn.setCellValueFactory(cellData -> new SimpleStringProperty(cellData.getValue().getName()));
         deadlineColumn.setCellValueFactory(cellData -> new SimpleStringProperty(cellData.getValue().getDeadline().toString()));
         statusColumn.setCellValueFactory(cellData -> new SimpleStringProperty(cellData.getValue().getStatus().toString()));
         budgetColumn.setCellValueFactory(cellData -> new SimpleStringProperty(cellData.getValue().getBudget().toString()));
-
-        // FIX: Display client name instead of ID using the map
         clientColumn.setCellValueFactory(cellData -> {
             Client client = clientMap.get(cellData.getValue().getClientId());
             return new SimpleStringProperty(client != null ? client.getName() : "Unknown Client");
@@ -90,21 +87,26 @@ public class ProjectSearchController {
     }
 
     /**
-     * Loads all projects from the database and populates the table.
+     * Loads all projects from the repository and populates the table.
      */
     private void loadProjects() {
         try {
             allProjects = projectRepository.findAll();
             projectsTableView.setItems(FXCollections.observableArrayList(allProjects));
             logger.info("Successfully loaded {} projects into the table.", allProjects.size());
+
+            Set<ProjectStatus> uniqueStatuses = allProjects.stream()
+                    .map(Project::getStatus)
+                    .collect(Collectors.toSet());
+            logger.info("Unique project statuses found are: {}", uniqueStatuses);
         } catch (DatabaseReadException e) {
-            logger.error("Failed to load projects from the database.", e);
-            new Alert(Alert.AlertType.ERROR, "Error loading data from database. Please check logs.").showAndWait();
+            showStyledAlert(Alert.AlertType.ERROR, "Database Error", "Failed to Load Projects", "Could not retrieve project data from the database. Please check the logs.");
         }
     }
 
     /**
-     * Handles the filter button action.
+     * Handles the filter button action. Filters the project list based on
+     * user input for name and status.
      */
     @FXML
     private void handleFilter() {
@@ -117,99 +119,98 @@ public class ProjectSearchController {
                     ProjectStatus statusFilter = statusFilterComboBox.getValue();
                     return statusFilter == null || p.getStatus().equals(statusFilter);
                 })
-                .collect(Collectors.toList());
-
+                .toList();
         projectsTableView.setItems(FXCollections.observableArrayList(filteredList));
-        logger.info("Applied filters. Displaying {} projects.", filteredList.size());
     }
 
     /**
-     * Clears all active filters.
+     * Clears all active filters and restores the full list of projects.
      */
     @FXML
     private void clearFilters() {
         nameFilterField.clear();
         statusFilterComboBox.getSelectionModel().clearSelection();
         projectsTableView.setItems(FXCollections.observableArrayList(allProjects));
-        logger.info("Filters cleared.");
     }
 
     /**
-     * Opens the project edit window in "Add New" mode.
+     * Opens the project edit dialog in "Add New" mode using the generic DialogHelper.
      */
     @FXML
     private void handleAddNewProject() {
-        showProjectEditDialog(null);
+        boolean saveClicked = DialogHelper.showEditDialog("project-edit-view.fxml", "Add New Project", null);
+        if (saveClicked) {
+            loadProjects();
+        }
     }
 
     /**
-     * Opens the project edit window in "Edit" mode for the selected project.
+     * Opens the project edit dialog in "Edit" mode for the selected project.
+     * Shows a warning if no project is selected.
      */
     @FXML
     private void handleEditProject() {
         Project selectedProject = projectsTableView.getSelectionModel().getSelectedItem();
-        if (selectedProject == null) {
-            new Alert(Alert.AlertType.WARNING, "Please select a project to edit.").show();
-            return;
+        if (selectedProject != null) {
+            boolean saveClicked = DialogHelper.showEditDialog("project-edit-view.fxml", "Edit Project", selectedProject);
+            if (saveClicked) {
+                loadProjects();
+            }
+        } else {
+            showStyledAlert(Alert.AlertType.WARNING, "Selection Missing", "No Project Selected", "Please select a project from the table to edit.");
         }
-        showProjectEditDialog(selectedProject);
     }
 
-// Inside ProjectSearchController.java
-
-// Replace the existing handleDeleteProject method with this one
     /**
      * Deletes the selected project after user confirmation.
+     * Shows a warning if no project is selected.
      */
     @FXML
     private void handleDeleteProject() {
         Project selectedProject = projectsTableView.getSelectionModel().getSelectedItem();
         if (selectedProject == null) {
-            new Alert(Alert.AlertType.WARNING, "Please select a project to delete.").show();
+            showStyledAlert(Alert.AlertType.WARNING, "Selection Missing", "No Project Selected", "Please select a project from the table to delete.");
             return;
         }
 
-        // Guideline #8: Confirmation Dialog
         Alert confirmation = new Alert(Alert.AlertType.CONFIRMATION);
         confirmation.setTitle("Confirm Deletion");
         confirmation.setHeaderText("Are you sure you want to delete this project?");
         confirmation.setContentText("Project: " + selectedProject.getName());
+        styleAlert(confirmation);
 
         if (confirmation.showAndWait().orElse(ButtonType.CANCEL) == ButtonType.OK) {
             projectRepository.deleteById(selectedProject.getId());
-            logger.info("User confirmed to delete project ID: {}", selectedProject.getId());
-            // Refresh the table view to show the project has been removed
+            logger.info("User confirmed deletion of project ID: {}", selectedProject.getId());
             loadProjects();
         }
     }
 
     /**
-     * A helper method to show the project edit/add dialog.
-     * @param project The project to edit, or null to add a new one.
+     * Creates, styles, and shows an Alert dialog.
+     *
+     * @param type The type of alert (e.g., WARNING, ERROR).
+     * @param title The text for the window title bar.
+     * @param header The main header text inside the dialog.
+     * @param content The detailed content message.
      */
-    private void showProjectEditDialog(Project project) {
-        try {
-            FXMLLoader loader = new FXMLLoader(FreelanceManagementApplication.class.getResource("project-edit-view.fxml"));
-            Scene scene = new Scene(loader.load());
+    private void showStyledAlert(Alert.AlertType type, String title, String header, String content) {
+        Alert alert = new Alert(type);
+        alert.setTitle(title);
+        alert.setHeaderText(header);
+        alert.setContentText(content);
+        styleAlert(alert);
+        alert.showAndWait();
+    }
 
-            ProjectEditController controller = loader.getController();
-            if (project != null) {
-                controller.setProjectToEdit(project);
-            }
-
-            Stage dialogStage = new Stage();
-            dialogStage.setTitle(project == null ? "Add New Project" : "Edit Project");
-            dialogStage.initModality(Modality.WINDOW_MODAL);
-            dialogStage.initOwner(FreelanceManagementApplication.getMainStage());
-            dialogStage.setScene(scene);
-
-            dialogStage.showAndWait(); // Show window and wait for it to be closed
-
-            // After the dialog is closed, refresh the data in the table
-            loadProjects();
-
-        } catch (IOException e) {
-            logger.error("Failed to open the project edit dialog.", e);
-        }
+    /**
+     * Applies the custom dark theme stylesheet to any given Alert.
+     *
+     * @param alert The Alert dialog to be styled.
+     */
+    private void styleAlert(Alert alert) {
+        DialogPane dialogPane = alert.getDialogPane();
+        dialogPane.getStylesheets().add(getClass().getResource("/hr/tvz/java/freelance/freelancemanagementtool/css/styles.css").toExternalForm());
+        dialogPane.getStyleClass().add("dialog-pane");
     }
 }
